samples/_failures_safe/1761375759_9a5a48_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_63cd8ca2.c: In function ‘main’:
./samples/SAFE/__tmp_63cd8ca2.c:168:5: error: expected declaration or statement at end of input
  168 |     if (ctx.current_state == DONE) {
      |     ^~
./samples/SAFE/__tmp_63cd8ca2.c:168:5: error: expected declaration or statement at end of input
